clang/test/BSC/Negative/SafeZone/simplify_unsafe_funcs/function-pointer-assignment-diagnostic-order.cbs
// RUN: %clang_cc1 -fsyntax-only -verify -x bsc %s

_Safe void take_owned(int * _Owned p);
_Safe void take_borrow(char * _Borrow p);

void test_owned_diag_order(void) {
  _Safe void (*dst)(int * _Borrow) = 0;
  dst = take_owned; // expected-error {{cannot cast '_Safe void (int *_Owned)' to '_Safe void (*)(int *_Borrow)'}}
}

void test_borrow_diag_order(void) {
  _Safe void (*dst)(const char * _Borrow) = 0;
  dst = take_borrow; // expected-error {{incompatible _Borrow function pointer types, cannot cast '_Safe void (char *_Borrow)' to '_Safe void (*)(const char *_Borrow)'}}
}
